# k8s-grafana-metrics

./: .editorconfig  .gitignore  Makefile  README.md  manage.py  pyproject.toml
grafana_metrics/: manage.py
grafana_metrics/da/: admin.py  apps.py
grafana_metrics/da/migrations/: 0001_initial.py
grafana_metrics/da/models/: __init__.py  dasboards.py
grafana_metrics/domain/graphs/: rps_all.py
grafana_metrics/project/: urls.py  wsgi.py
grafana_metrics/project/settings/: base.py
